# racing_segmentation

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: yolo11-seg.json  yolo11.json  yolo11_seg.json
dataset/: classes.txt
demo/: CMakeLists.txt  main.cpp
include/racing_segmentation/: image_utils.hpp  parser.hpp  profiler.hpp
launch/: racing_segmentation.launch.py  racing_segmentation_web.launch.py
src/: image_utils.cpp  main.cpp  parser.cpp  sample.cpp
utils/: detect.py  export.py  image_argumention.py  image_merge.py  image_rename.py  json_to_label.py  replace_qr_code.py  train.py  video_to_image.py
